# mcp-coda

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  gemini-extension.json  llms-full.txt  llms.txt  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  release.yml  tests.yml
evaluations/: eval.xml
src/mcp_coda/: __init__.py  __main__.py  client.py  config.py  exceptions.py
src/mcp_coda/models/: __init__.py  base.py  docs.py  folders.py  formulas.py  pages.py  permissions.py  rows.py  tables.py
src/mcp_coda/resources/: coda-api-patterns.md  coda-automations.md  coda-doc-structure.md  coda-permissions.md  coda-table-design.md  folder-organization.md  formula-controls.md  page-content.md  publishing-analytics.md  row-operations.md
src/mcp_coda/resources/prompts/: analyze-doc-structure.md  audit-permissions.md  design-table-schema.md  migrate-spreadsheet.md  setup-automation.md
src/mcp_coda/servers/: __init__.py  _helpers.py  account.py  analytics.py  automations.py  controls.py  docs.py  folders.py  formulas.py  pages.py  permissions.py  prompts.py  publishing.py  resources.py  rows.py  tables.py
tests/: conftest.py
tests/unit/: test_client.py  test_config.py  test_exceptions.py  test_helpers.py  test_models.py  test_prompts.py  test_rate_limit_budget.py  test_resources.py  test_tools_account.py  test_tools_analytics.py  test_tools_automations.py  test_tools_controls.py  test_tools_docs.py  test_tools_folders.py  test_tools_formulas.py  test_tools_pages.py  test_tools_permissions.py  test_tools_publishing.py  test_tools_rows.py  test_tools_tables.py
