[project]
name = "mcp-coda"
version = "0.4.0"
description = "MCP server for Coda API — docs, pages, tables, rows, formulas, permissions, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "vish288"}]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "coda",
    "coda-api",
    "ai",
    "llm",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0,<3.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]

[project.scripts]
mcp-coda = "mcp_coda:main"

[project.urls]
Homepage = "https://github.com/vish288/mcp-coda"
Repository = "https://github.com/vish288/mcp-coda"
Issues = "https://github.com/vish288/mcp-coda/issues"
Changelog = "https://github.com/vish288/mcp-coda/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_coda"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "S", "C4", "EM", "ISC"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
